--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,7 +125,7 @@
   box-sizing: border-box;
 }
 
-a { text-decoration: none; }
+a { text-decoration: none; white-space: nowrap; }
 
 li { list-style: none; }
 
