--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,6 +129,7 @@ a {
   text-decoration: none;
   white-space: nowrap;
   display: inline;
+  text-decoration-line: none;
 }
 
 li { list-style: none; }
